# SimpleOscilloscope

./: CMakeLists.txt  README.md
Arduino/Analizer/: Analizer.ino
Linux/: SimpleOscilloscope  main.cpp  timer.cpp  timer.hpp
Linux/device/: device.hpp  deviceBase.cpp  deviceStruct.hpp  deviceUART.cpp
Linux/logs/: logs.cpp  logs.hpp
include/device/: device.hpp  deviceStruct.hpp
src/: main.cpp  timer.cpp
src/device/: deviceBase.cpp  deviceFake.cpp  deviceUART.cpp
src/logs/: logs.cpp
